<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.quarkus.ts.startstop</groupId>
    <artifactId>parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Quarkus StartStop TS: Parent</name>
    <properties>
        <quarkus.version>3.4.1</quarkus.version>
        <quarkus.platform.group-id>io.quarkus</quarkus.platform.group-id>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.version>3.10.1</maven.compiler.version>
        <maven.surefire.version>2.22.2</maven.surefire.version>
        <maven.failsafe.version>2.22.2</maven.failsafe.version>
        <maven.build.helper.version>3.3.0</maven.build.helper.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.jupiter.version>5.9.2</junit.jupiter.version>
        <commons.io.version>2.11.0</commons.io.version>
        <commons.lang.version>3.12.0</commons.lang.version>
        <jboss-logging.version>3.5.0.Final</jboss-logging.version>
        <log4j.version>2.19.0</log4j.version>
        <playwright.version>1.30.0</playwright.version>
        <formatter-maven-plugin.version>2.22.0</formatter-maven-plugin.version>
        <impsort-maven-plugin.version>1.8.0</impsort-maven-plugin.version>
        <xml-format-maven-plugin>3.2.2</xml-format-maven-plugin>
        <!-- Test to be executed by default (should be all of them) -->
        <includeTags>generator,startstop,bomtests,codequarkus,special-chars</includeTags>
        <!-- Default values for format -->
        <src.format.goal>format</src.format.goal>
        <src.sort.goal>sort</src.sort.goal>
        <xml.format.goal>xml-format</xml.format.goal>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.jboss.logging</groupId>
            <artifactId>jboss-logging</artifactId>
            <version>${jboss-logging.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.microsoft.playwright</groupId>
            <artifactId>playwright</artifactId>
            <version>${playwright.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>testsuite</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>none</excludeTags>
            </properties>
        </profile>
        <profile>
            <id>testsuite-no-native</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>native</excludeTags>
            </properties>
        </profile>
        <profile>
            <id>testsuite-community</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>product</excludeTags>
            </properties>
        </profile>
        <profile>
            <id>testsuite-community-no-native</id>
            <modules>
                <module>testsuite</module>
            </modules>
            <properties>
                <excludeTags>product,native</excludeTags>
            </properties>
        </profile>
        <profile>
            <id>ide</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <excludeTags>none</excludeTags>
            </properties>
            <modules>
                <module>testsuite</module>
                <module>app-jakarta-rest-minimal</module>
                <module>app-full-microprofile</module>
            </modules>
        </profile>
        <profile>
            <id>validate-format</id>
            <activation>
                <property>
                    <name>validate-format</name>
                </property>
            </activation>
            <properties>
                <src.format.goal>validate</src.format.goal>
                <src.sort.goal>check</src.sort.goal>
                <xml.format.goal>xml-check</xml.format.goal>
            </properties>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>${formatter-maven-plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>${src.format.goal}</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <artifactId>quarkus-ide-config</artifactId>
                        <groupId>io.quarkus</groupId>
                        <version>${quarkus.version}</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configFile>eclipse-format.xml</configFile>
                    <lineEnding>LF</lineEnding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>net.revelc.code</groupId>
                <artifactId>impsort-maven-plugin</artifactId>
                <version>${impsort-maven-plugin.version}</version>
                <configuration>
                    <!-- store outside of target to speed up formatting when mvn clean is used -->
                    <cachedir>.cache</cachedir>
                    <groups>java.,javax.,org.,com.</groups>
                    <staticGroups>*</staticGroups>
                    <removeUnused>true</removeUnused>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>${src.sort.goal}</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>au.com.acegi</groupId>
                <artifactId>xml-format-maven-plugin</artifactId>
                <version>${xml-format-maven-plugin}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>${xml.format.goal}</goal>
                        </goals>
                        <configuration>
                            <indentSize>4</indentSize>
                            <excludes>
                                <!-- Exclude files from target folder -->
                                <exclude>**/target/**/*.xml</exclude>
                                <!-- Exclude Quarkus main repository -->
                                <exclude>**/quarkus/**/*.xml</exclude>
                                <!-- Exclude .idea -->
                                <exclude>.idea/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
